--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 			<path d="M0 0 L50 100 L100 0 Z" fill="#fff" stroke="#fff"></path>
 		</svg>
 		<div class="container">
-			<div class="row">
+			<div class="row" style="display: none">
 						<div class="col-md-12">
 						</div>
 						<div id="owl-demo">
