--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         	<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
             	<div class="service-list">
                 	<div class="service-list-col1">
-                    	<i class="fa-paw"></i>
+                    	<i class="fa-bullseye"></i>
                     </div>
                 	<div class="service-list-col2">
                         <h3>marka &amp; kurumsal kİmlİk</h3>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="service-list">
                 	<div class="service-list-col1">
-                    	<i class="fa-gear"></i>
+                    	<i class="fa-film"></i>
                     </div>
                 	<div class="service-list-col2">
                         <h3>video &amp; fotoğraf</h3>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="service-list">
                 	<div class="service-list-col1">
-                    	<i class="fa-apple"></i>
+                    	<i class="fa-pencil"></i>
                     </div>
                 	<div class="service-list-col2">
                         <h3>grafİk</h3>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="service-list">
                 	<div class="service-list-col1">
-                    	<i class="fa-medkit"></i>
+                    	<i class="fa-cloud-upload"></i>
                     </div>
                 	<div class="service-list-col2">
                         <h3>web</h3>
@@ -124,7 +124,7 @@
             	<P class="padding-b">İhtiyacınıza yönelik servisleri, size özel tasarlanmış şekilde tek tek talep edebileceğiniz gibi, değişen kapsamlarıyla aylık paketlerimizi de tercih edebilirsiniz.</P>
             	<div class="featured-box">
                 	<div class="featured-box-col1 wow fadeInRight delay-02s">
-                    	<i class="fa-magic"></i>
+                    	<i class="fa-car" style="color: #fff" ></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-02s">
                         <h3>baz paket</h3>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="featured-box">
                 	<div class="featured-box-col1 wow fadeInRight delay-04s">
-                    	<i class="fa-gift"></i>
+                    	<i class="fa-plane" style="color: #fff"></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-04s">
                         <h3>standart paket</h3>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="featured-box">
                 	<div class="featured-box-col1 wow fadeInRight delay-06s">
-                    	<i class="fa-dashboard"></i>
+                    	<i class="fa-rocket" style="color: #fff"></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-06s">
                         <h3>gelişmiş paket</h3>
@@ -212,8 +212,7 @@
 		<b class="quote-right wow fadeInDown delay-03"><i class="fa-quote-right"></i></b>
     	<div class="row">
         	<div class="col-lg-12">
-            	<p class="client-part-haead wow fadeInDown delay-05">It was a pleasure to work with the guys at Knight Studio. They made sure 
-we were well fed and drunk all the time!</p>
+            	<p class="client-part-haead wow fadeInDown delay-05">İş Ortaklarımız</p>
             </div>
         </div>
     	<ul class="client wow fadeIn delay-05s">
@@ -252,11 +251,11 @@ we were well fed and drunk all the time!</p>
                         <li><a href="#" class="fa-google-plus"></a></li>
                     </ul>
                 </div>
-                <h3 class="wow fadeInDown delay-03s">Walter White</h3>
-                <span class="wow fadeInDown delay-03s">Chief Executive Officer</span>
+                <h3 class="wow fadeInDown delay-03s">Efe Can UYAR</h3>
+                <span class="wow fadeInDown delay-03s">Yönetmen</span>
                 <p class="wow fadeInDown delay-03s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
-            </div>
-            <div class="team-leader-box">
+           </div>
+            <div class="team-leader-box" style="display: none;">
                 <div class="team-leader  wow fadeInDown delay-06s"> 
                     <div class="team-leader-shadow"><a href="#"></a></div>
                     <img src="img/team-leader-pic2.jpg" alt="">
@@ -271,7 +270,7 @@ we were well fed and drunk all the time!</p>
                 <span class="wow fadeInDown delay-06s">Product Manager</span>
                 <p class="wow fadeInDown delay-06s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
             </div>
-            <div class="team-leader-box">
+            <div class="team-leader-box" style="display: none;">
                 <div class="team-leader wow fadeInDown delay-09s"> 
                     <div class="team-leader-shadow"><a href="#"></a></div>
                     <img src="img/team-leader-pic3.jpg" alt="">
