1920 and 1366 width fix

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 <script type="text/javascript" src="js/jquery.isotope.js"></script>
 <script type="text/javascript" src="js/wow.js"></script>
 <script type="text/javascript" src="js/classie.js"></script>
-<script src="contactform/contactform.js"></script>
 
 </head>
 <body>
@@ -300,7 +299,7 @@
 <section class="main-section contact" id="contact">
 	
         <div class="row">
-        	<div class="col-lg-6 col-sm-7 wow fadeInLeft">
+        	<div class="col-md-6 col-md-offset-3 wow fadeInLeft">
             	<div class="contact-info-box address clearfix">
                 	<h3><i class=" icon-map-marker"></i>Adres:</h3>
                 	<span>1234 Sokak, ABC Caddesi<br>Sarnıç, Gaziemir, İZMİR</span>
@@ -324,33 +323,6 @@
                     <li style="display: none;" class="gplus"><a href="#"><i class="fa-google-plus"></i></a></li>
                     <li class="dribbble"><a href="https://www.instagram.com/9emedya/" target="_blank"><i class="fa-instagram"></i></a></li>
                 </ul>
-            </div>
-        	<div class="col-lg-6 col-sm-5 wow fadeInUp delay-05s">
-            	<div class="form">
-                	
-                    <div id="sendmessage">Your message has been sent. Thank you!</div>
-                    <div id="errormessage"></div>
-                    <form action="" method="post" role="form" class="contactForm">
-                        <div class="form-group">
-                            <input type="text" name="name" class="form-control input-text" id="name" placeholder="Adınız" data-rule="minlen:4" data-msg="Lütfen en az 4 karakter giriniz." />
-                            <div class="validation"></div>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" class="form-control input-text" name="email" id="email" placeholder="Email Adresiniz" data-rule="email" data-msg="Lütfen geçerli bir mail adresi giriniz." />
-                            <div class="validation"></div>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control input-text" name="subject" id="subject" placeholder="Konu" data-rule="minlen:4" data-msg="Lütfen en az 8 karakter giriniz." />
-                            <div class="validation"></div>
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control input-text text-area" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Mesajınız"></textarea>
-                            <div class="validation"></div>
-                        </div>
-                        
-                        <div class="text-center"><button type="submit" class="input-btn">Mesaj Gönder</button></div>
-                    </form>
-                </div>	
             </div>
         </div>
 </section>
