Overlap issue at the nav div fixed.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
     <!--header-end-->
 
-    <nav class="main-nav-outer" id="test">
+    <nav class="main-nav-outer" style="z-index: 20000" id="test">
         <!--main-nav-start-->
         <div class="container">
             <ul class="main-nav">
