--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <ul class="main-nav">
                 <li><a href="#header">ana sayfa</a></li>
                 <li><a href="#service">SERVİSLERİMİZ</a></li>
+                <li><a href="#packages">PAKETLERİMİZ</a></li>
                 <li><a href="#Portfolio">KATALOG</a></li>
                 <li style="display:none" class="small-logo"><a href="#header"><img src="img/small-logo.png" alt=""></a></li>
                 <li><a href="#client">İş ortaklarımız</a></li>
@@ -80,7 +81,7 @@
                         </div>
                         <div class="service-list-col2">
                             <h3>marka &amp; kurumsal kİmlİk</h3>
-                            <p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
+                            <p>İşletmenizin ihtiyaçlarına uygun ve hedef kitlenize yönelik kurumsal kimlik oluşturmanızda yardımcı oluyoruz. Renk seçimlerinizden, sloganınıza, web ve basılı ortamlardaki reklamlarınızdan sosyal medya hesaplarının yönetimine kadar her aşamada sizinleyiz.</p>
                         </div>
                     </div>
                     <div class="service-list">
@@ -89,7 +90,7 @@
                         </div>
                         <div class="service-list-col2">
                             <h3>video &amp; fotoğraf</h3>
-                            <p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
+                            <p>İster kurumsal olsun ister bireysel, tüm fotoğraf ve video ihtiyaçlarınızı karşılıyoruz. Mekan veya ürün fotoğrafları, tanıtım ve eğitim filmleri, 2 boyutlu animasyon, etkinlik, konser, sergi ve aklınıza gelebilecek diğer her türlü çekimde bize güvenebilirsiniz. Ayrıca bunların yanında önceden çekilmiş görselleriniz için kurgu, renk düzenleme ve geliştirme, özel efektler gibi post-production hizmetleri de sunuyoruz.</p>
                         </div>
                     </div>
                     <div class="service-list">
@@ -98,7 +99,7 @@
                         </div>
                         <div class="service-list-col2">
                             <h3>grafİk</h3>
-                            <p>Proin iaculis purus consequat digni sem digni ssim. Purus donec porttitora entum.</p>
+                            <p>Logonuz, kartvizitiniz, broşürleriniz, kataloglarınız, menüleriniz ve aklınıza gelebilecek her ihtiyacınız için birbiriyle uyumlu ve aynı dili konuşan ürünlerle ister dijital ister basılı grafik tasarım hizmetleri veriyoruz.</p>
                         </div>
                     </div>
                     <div class="service-list">
@@ -107,7 +108,7 @@
                         </div>
                         <div class="service-list-col2">
                             <h3>web</h3>
-                            <p>Proin iaculis purus consequat sem digni ssim. Sem porttitora entum.</p>
+                            <p>Kurumunuzun veya sizin ihtiyaçlarına uygun şekilde tasarlanmış, modern, dinamik ve her platforma uygun web sitesi tasarımları için de buradayız. Alan adı alımından, sitenin tasarımına, site için içerik üretilmesinden, hosting aşamasına kadar bize güvenebilirsiniz.</p>
                         </div>
                     </div>
                 </div>
@@ -122,7 +123,7 @@
 
 
 
-    <section class="main-section alabaster">
+    <section class="main-section alabaster" id="packages">
         <!--main-section alabaster-start-->
         <div class="container">
             <div class="row">
@@ -130,9 +131,9 @@
                     <img src="img/iphone.png" alt="">
                 </figure>
                 <div class="col-lg-7 col-sm-8 featured-work">
-                    <h2>paketlerimiz</h2>
+                    <h2>PAKETLERİMİZ</h2>
                     <P class="padding-b">İhtiyacınıza yönelik servisleri, size özel tasarlanmış şekilde tek tek talep edebileceğiniz gibi, değişen
-                        kapsamlarıyla aylık paketlerimizi de tercih edebilirsiniz.</P>
+                        kapsamlarıyla aylık paketlerimizi de tercih edebilirsiniz. Ücretlendirmeler için lütfen <a class="servicelink" href="#contact">bizimle iletişime geçin.</a></P>
                     <div class="featured-box">
                         <div class="featured-box-col1 wow fadeInRight delay-02s">
                             <i class="fa-car" style="color: #fff"></i>
@@ -321,6 +322,9 @@
                         <li style="display: none;" class="gplus"><a href="#"><i class="fa-google-plus"></i></a></li>
                         <li class="dribbble"><a href="https://www.instagram.com/9emedya/" target="_blank"><i class="fa-instagram"></i></a></li>
                     </ul>
+<div class="col-md-12">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2213.8623440510987!2d27.157767372938704!3d38.305583440242685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2str!4v1506605222433" width=100% height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
                 </div>
             </div>
         </section>
