Responsive and style changes
Logo is bigger on small devices,
Who we are section top margin removed,
Some other minor margin and padding changes.

--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
         </div>
     </section>
     <!--main-section client-part-end-->
-    <div class="c-logo-part">
-        <!--c-logo-part-start-->
+
+    <!-- <div class="c-logo-part">        
         <div class="container">
             <ul>
                 <li><a href="#"><img src="img/c-liogo1.png" alt=""></a></li>
@@ -255,30 +255,35 @@
                 <li><a href="#"><img src="img/c-liogo5.png" alt=""></a></li>
             </ul>
         </div>
-    </div>
+    </div> -->
+
     <!--c-logo-part-end-->
-    <section class="main-section team" id="team" style="padding-top: 0px;">
+    <section class="main-section team" id="team">
         <!--main-section team-start-->
         <div class="container">
             <h2>bİz kİmİz?</h2>
             <h6>Alanında eğitimli ve deneyimli kadromuzla tüm tanıtım ihtiyaçlarınızı karşılamaya hazırız.</h6>
             <div class="team-leader-block clearfix">
-                <div class="team-leader-box"></div>
-                <div class="team-leader-box">
-                    <div class="team-leader wow fadeInDown delay-03s">
-                        <div class="team-leader-shadow"><a href="#"></a></div>
-                        <img src="img/team-leader-pic1.jpg" alt="">
-                        <ul>
-                            <li><a href="#" class="fa-twitter"></a></li>
-                            <li><a href="#" class="fa-facebook"></a></li>
-                            <li><a href="#" class="fa-pinterest"></a></li>
-                            <li><a href="#" class="fa-google-plus"></a></li>
-                        </ul>
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4">
+                        <div class="team-leader-box">
+                            <div class="team-leader wow fadeInDown delay-03s">
+                                <div class="team-leader-shadow"><a href="#"></a></div>
+                                <img src="img/team-leader-pic1.jpg" alt="">
+                                <ul>
+                                    <li><a href="#" class="fa-twitter"></a></li>
+                                    <li><a href="#" class="fa-facebook"></a></li>
+                                    <li><a href="#" class="fa-pinterest"></a></li>
+                                    <li><a href="#" class="fa-google-plus"></a></li>
+                                </ul>
+                            </div>
+                            <h3 class="wow fadeInDown delay-03s">Efe Can UYAR</h3>
+                            <span class="wow fadeInDown delay-03s">Yönetmen</span>
+                            <p class="wow fadeInDown delay-03s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit
+                                amet, consectetur adipiscing elit proin consequat.</p>
+                        </div>
                     </div>
-                    <h3 class="wow fadeInDown delay-03s">Efe Can UYAR</h3>
-                    <span class="wow fadeInDown delay-03s">Yönetmen</span>
-                    <p class="wow fadeInDown delay-03s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit
-                        amet, consectetur adipiscing elit proin consequat.</p>
                 </div>
             </div>
         </div>
@@ -321,10 +326,12 @@
                         <li style="display: none;" class="pinterest"><a href="#"><i class="fa-pinterest"></i></a></li>
                         <li style="display: none;" class="gplus"><a href="#"><i class="fa-google-plus"></i></a></li>
                         <li class="dribbble"><a href="https://www.instagram.com/9emedya/" target="_blank"><i class="fa-instagram"></i></a></li>
-                    </ul>
-<div class="col-md-12">
+                    </ul>                                        
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2213.8623440510987!2d27.157767372938704!3d38.305583440242685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2str!4v1506605222433" width=100% height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
                 </div>
             </div>
         </section>
