--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
-	<link rel="shortcut icon" href="C:\Users\efeca\Desktop\ECU Web\ecucv\favicon.ico">
+	<link rel="shortcut icon" href="C:\Users\efeca\Desktop\ECU Web\uyarefecan.github.io\favicon.ico">
 	</head>
 	<body>
 
@@ -93,7 +93,7 @@
 					<h2>Merhaba!</h2>
 					<p>2013 yılında yetenek sınavı sonucu 1. olarak eğitim görme hakkı kazandığım 9 Eylül Üniversitesi, Güzel Sanatlar Fakültesi, Film Tasarım Bölümü, Yönetmenlik Anasanat Dalı'ndan 2017 yılında mezun oldum. Eğitimim boyunca aralarında animasyon türünde örnekler de bulunan 9 film yazıp, yönettim, tamamını kurgulayıp, afişlerini tasarladım. Bu filmlerden "Fiş", "13 Saat" ve "4 Duvar" çeşitli festival ve yarışmalarda; gösterim ve/veya ödül almıştır.</p>
 					<p>Eğitimim süresince oldukça hakim olduğum Premiere, After Effects, Photoshop ve Illustrator gibi Adobe programlarının yanısıra, NukeX, Blender 3D gibi programlarda da kendimi geliştirdim ve geliştirmeye devam ediyorum. İlki "Yağmurlarda Yıkansam" uzun metraj filminde pre-production boyunca set amirliği, diğeri de Tiramisu Prodüksiyon'da videographer ve video editor görevlerinde olmak üzere iki staj yaptım.</p>
-					<p>Ekim 2017 tarihinden bu yana freelance olarak video prodüksiyonu, fotoğraf, ürün, menü, ambalaj, grafik tasarımı, sosyal medya yöneticiliği ve web designer görevlerini yerine getiriyorum.</p>
+					<p>Ekim 2017 tarihinden bu yana freelance olarak video prodüksiyonu, fotoğraf, menü, ambalaj, grafik tasarımı, sosyal medya yöneticiliği ve web designer görevlerini yerine getiriyorum.</p>
 					<p>Bu sitede; çalıştığım projeler, deneyimlerim, eğitimim, yetkin olduğum programlar ve diller hakkında detaylı bilgilere ulaşabilir, filmlerimin büyük kısmının izleme linklerini bulabilirsiniz.</p>
 					<p>
 						<ul class="fh5co-social-icons">
@@ -282,7 +282,7 @@
 									<span class="company">Kısa Film - 2016 - Yazan, Yöneten ve Kurgulayan</span>
 								</div>
 								<div class="timeline-body">
-									<p><i class="fas fa-star fa-spin" style="color:#FF9000"></i>  İstanbul Kısa Filmciler Derneği "2. Korkunç Bir Film Yarışması" - 2017 - En İyi İkinci Film</p>
+									<p><i class="fas fa-star fa-spin" style="color:#FF9000"></i>  İstanbul Kısa Filmciler Derneği "2. Korkunç Bir Kısa Film Yarışması" - 2017 - En İyi İkinci Film</p>
 									<p><i class="fas fa-star fa-spin" style="color:#FF9000"></i>  Balkan Panaroma Sinema Günleri - 2017 - Özel Seçki</p>
 									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Gizem</p
 									<p><i class="far fa-clock"></i>  Süre: 11' 17"</p>
