--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 					<ul class="info">
 						<li><span class="first-block"><i class="fas fa-user"></i> İsim:</span><span class="second-block">Efe Can Uyar</span></li>
 						<li><span class="first-block"><i class="fas fa-mobile"></i> Telefon:</span><span class="second-block">+90 506 390 31 85</span></li>
-						<li><span class="first-block"><i class="fas fa-envelope"></i> Email:</span><span class="second-block">efecanuyar@gmail.com</span></li>
-						<!-- <li><span class="first-block">Website:</span><span class="second-block">www.efecanuyar.com</span></li> -->
+						<li><span class="first-block"><i class="fas fa-envelope"></i> Email:</span><span class="second-block"><a href="mailto:efecanuyar@gmail.com" target="_top">efecanuyar@gmail.com</a></span></li>
+						<!-- <li><span class="first-block">Website:</span><span class="second-block">www.efecanuyar.com</span></li> <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">Send Mail</a>-->
 						<li><span class="first-block"><i class="fas fa-map-marker"></i> Adres:</span><span class="second-block">Gayrettepe/İSTANBUL</span></li>
 						<li><span class="first-block"><i class="fas fa-address-card"></i> Ehliyet:</span><span class="second-block">A2, B</span></li>
 					</ul>
