favicon address changes to local root.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
-	<link rel="shortcut icon" href="C:\Users\efeca\Desktop\ECU Web\uyarefecan.github.io\favicon.ico">
+	<link rel="shortcut icon" href=".\favicon.ico">
 	</head>
 	<body>
 
@@ -147,7 +147,7 @@
 									<span class="company">ClayMotion Animasyon - 2012 - Yazan, Yöneten ve Kurgulayan</span>
 								</div>
 								<div class="timeline-body">
-									<p><i class="fas fa-tag"></i>  Tür: ClayMotion Animasyon</p
+									<p><i class="fas fa-tag"></i>  Tür: ClayMotion Animasyon</p>
 									<p><i class="far fa-clock"></i>  Süre: 2' 48"</p>
 									<p><i class="fas fa-volume-up"></i>  Ses: Stereo</p>
 									<p><i class="fas fa-paint-brush"></i>  Renk: Renkli</p>
@@ -165,7 +165,7 @@
 									<span class="company">Kısa Film - 2014 - Yazan, Yöneten ve Kurgulayan</span>
 								</div>
 								<div class="timeline-body">
-									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Gizem</p
+									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Gizem</p>
 									<p><i class="far fa-clock"></i>  Süre: 7' 38"</p>
 									<p><i class="fas fa-volume-up"></i>  Ses: Stereo, Zoom H1</p>
 									<p><i class="fas fa-paint-brush"></i>  Renk: Renkli</p>
@@ -184,7 +184,7 @@
 									<span class="company">Kısa Film - 2014 - Yazan, Yöneten ve Kurgulayan</span>
 								</div>
 								<div class="timeline-body">
-									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Komedi</p
+									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Komedi</p>
 									<p><i class="far fa-clock"></i>  Süre: 2' 27"</p>
 									<p><i class="fas fa-volume-up"></i>  Ses: Stereo, Samsung Galaxy Note 2</p>
 									<p><i class="fas fa-paint-brush"></i>  Renk: Renkli</p>
@@ -203,7 +203,7 @@
 									<span class="company">Kısa Film - 2015 - Yazan, Yöneten ve Kurgulayan</span>
 								</div>
 								<div class="timeline-body">
-									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Gerilim</p
+									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Gerilim</p>
 									<p><i class="far fa-clock"></i>  Süre: 6' 06"</p>
 									<p><i class="fas fa-volume-up"></i>  Ses: Stereo, Zoom H1</p>
 									<p><i class="fas fa-paint-brush"></i>  Renk: Renkli</p>
@@ -223,7 +223,7 @@
 								</div>
 								<div class="timeline-body">
 									<p><i class="fas fa-star fa-spin" style="color:#FF9000"></i>  16. İzmir Uluslararası Kısa Film Festivali Özel Seçkisi - 2015</p>
-									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Gizem</p
+									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Gizem</p>
 									<p><i class="far fa-clock"></i>  Süre: 14' 01"</p>
 									<p><i class="fas fa-volume-up"></i>  Ses: Stereo, Zoom H6</p>
 									<p><i class="fas fa-paint-brush"></i>  Renk: Renksiz</p>
@@ -284,7 +284,7 @@
 								<div class="timeline-body">
 									<p><i class="fas fa-star fa-spin" style="color:#FF9000"></i>  İstanbul Kısa Filmciler Derneği "2. Korkunç Bir Kısa Film Yarışması" - 2017 - En İyi İkinci Film</p>
 									<p><i class="fas fa-star fa-spin" style="color:#FF9000"></i>  Balkan Panaroma Sinema Günleri - 2017 - Özel Seçki</p>
-									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Gizem</p
+									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Gizem</p>
 									<p><i class="far fa-clock"></i>  Süre: 11' 17"</p>
 									<p><i class="fas fa-volume-up"></i>  Ses: Stereo, Zoom H1</p>
 									<p><i class="fas fa-paint-brush"></i>  Renk: Renkli</p>
@@ -316,7 +316,7 @@
 									<span class="company">Kısa Film - 2017 - Yazan, Yöneten ve Kurgulayan</span>
 								</div>
 								<div class="timeline-body">
-									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Dram</p
+									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Dram</p>
 									<p><i class="far fa-clock"></i>  Süre: 8' 59"</p>
 									<p><i class="fas fa-volume-up"></i>  Ses: Stereo, Zoom H1</p>
 									<p><i class="fas fa-paint-brush"></i>  Renk: Renkli</p>
@@ -336,7 +336,7 @@
 								</div>
 								<div class="timeline-body">
 									<p><i class="fas fa-star fa-spin" style="color:#FF9000"></i>  Bornova Belediyesi "Kadına Şiddete Hayır" Kısa Film Yarışması - 2017 - Finalist</p>
-									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Gerilim</p
+									<p><i class="fas fa-tag"></i>  Tür: Kurmaca - Gerilim</p>
 									<p><i class="far fa-clock"></i>  Süre: 17' 26"</p>
 									<p><i class="fas fa-volume-up"></i>  Ses: Stereo, Zoom H6</p>
 									<p><i class="fas fa-paint-brush"></i>  Renk: Renkli</p>
@@ -499,72 +499,6 @@
 			</div>
 		</div>
 	</div>
-
-	<!-- <div id="fh5co-work" class="fh5co-bg-dark">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Yazıp Yönettiğim Kısa Filmler</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4 col-padding">
-					<div class="embed-responsive embed-responsive-16by9">
-  					<iframe title="test1" src="https://www.youtube.com/embed/GHeBfPSsocA"
-							class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-				<div class="col-md-4 col-padding">
-					<div class="embed-responsive embed-responsive-16by9">
-  					<iframe title="test2" src="https://www.youtube.com/embed/gOcj8dY6eK8"
-							class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-				<div class="col-md-4 col-padding">
-					<div class="embed-responsive embed-responsive-16by9">
-  					<iframe title="tes3" src="https://www.youtube.com/embed/rLDEAQ9A998"
-							class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-				<div class="col-md-4 col-padding">
-					<div class="embed-responsive embed-responsive-16by9">
-  					<iframe title="tes4" src="https://www.youtube.com/embed/evFq-ZoHYQ0"
-							class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-				<div class="col-md-4 col-padding">
-					<div class="embed-responsive embed-responsive-16by9">
-  					<iframe title="test5" src="https://www.youtube.com/embed/c8_pKb6MePg"
-							class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-				<div class="col-md-4 col-padding">
-					<div class="embed-responsive embed-responsive-16by9">
-  					<iframe title="tes6" src="https://www.youtube.com/embed/Kr4n_aNanbs"
-							class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-				<div class="col-md-4 col-padding">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe title="test7" src="https://www.youtube.com/embed/HruvmWTu2kw"
-							class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-				<div class="col-md-4 col-padding">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe title="tes8" src="https://www.youtube.com/embed/V_BsLOeEWwI"
-							class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-				<div class="col-md-4 col-padding">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe title="tes9" src="https://www.youtube.com/embed/SgrVYFK-i7s"
-							class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
 
 	<div id="fh5co-footer" class="fh5co-bg-dark">
 		<div class="container">
