--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block"><i class="fas fa-user"></i> İsim:</span><span class="second-block">Efe Can Uyar</span></li>
-						<li><span class="first-block"><i class="fas fa-mobile"></i> Telefon:</span><span class="second-block">+90 506 390 31 85</span></li>
+						<li><span class="first-block"><i class="fas fa-mobile"></i> Telefon:</span><span class="second-block"><a href="tel:+905063903185">+90 506 390 31 85</a></span></li>
 						<li><span class="first-block"><i class="fas fa-envelope"></i> Email:</span><span class="second-block"><a href="mailto:efecanuyar@gmail.com" target="_top">efecanuyar@gmail.com</a></span></li>
 						<!-- <li><span class="first-block">Website:</span><span class="second-block">www.efecanuyar.com</span></li> <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">Send Mail</a>-->
 						<li><span class="first-block"><i class="fas fa-map-marker"></i> Adres:</span><span class="second-block">Gayrettepe/İSTANBUL</span></li>
@@ -505,8 +505,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<p><i class="fas fa-copyright"></i>  2018 - Efe Can UYAR - Tüm Hakları Saklıdır.</p>
-					<p><i class="fas fa-mobile"></i>  +90 506 390 31 85</p>
-					<p><i class="fas fa-envelope"></i>  efecanuyar@gmail.com</p>
+					<p><i class="fas fa-mobile"></i>  <a class="phone" href="tel:+905063903185">+90 506 390 31 85</a></p>
+					<p><i class="fas fa-envelope"></i>  <a class="phone" href="mailto:efecanuyar@gmail.com" target="_top">efecanuyar@gmail.com</a></p>
 				</div>
 			</div>
 		</div>
