href click bug fixed.

--- a/index.html
+++ b/index.html
@@ -79,17 +79,16 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 col-sm-12 col-xs-12">
 					<ul class="info">
 						<li><span class="first-block"><i class="fas fa-user"></i> İsim:</span><span class="second-block">Efe Can Uyar</span></li>
 						<li><span class="first-block"><i class="fas fa-mobile"></i> Telefon:</span><span class="second-block"><a href="tel:+905063903185">+90 506 390 31 85</a></span></li>
 						<li><span class="first-block"><i class="fas fa-envelope"></i> Email:</span><span class="second-block"><a href="mailto:efecanuyar@gmail.com" target="_top">efecanuyar@gmail.com</a></span></li>
-						<!-- <li><span class="first-block">Website:</span><span class="second-block">www.efecanuyar.com</span></li> <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">Send Mail</a>-->
 						<li><span class="first-block"><i class="fas fa-map-marker"></i> Adres:</span><span class="second-block">Gayrettepe/İSTANBUL</span></li>
 						<li><span class="first-block"><i class="fas fa-address-card"></i> Ehliyet:</span><span class="second-block">A2, B</span></li>
 					</ul>
 				</div>
-				<div class="col-md-8">
+				<div class="col-md-8 col-sm-12 col-xs-12">
 					<h2>Merhaba!</h2>
 					<p>2013 yılında yetenek sınavı sonucu 1. olarak eğitim görme hakkı kazandığım 9 Eylül Üniversitesi, Güzel Sanatlar Fakültesi, Film Tasarım Bölümü, Yönetmenlik Anasanat Dalı'ndan 2017 yılında mezun oldum. Eğitimim boyunca aralarında animasyon türünde örnekler de bulunan 9 film yazıp, yönettim, tamamını kurgulayıp, afişlerini tasarladım. Bu filmlerden "Fiş", "13 Saat" ve "4 Duvar" çeşitli festival ve yarışmalarda; gösterim ve/veya ödül almıştır.</p>
 					<p>Eğitimim süresince oldukça hakim olduğum Premiere, After Effects, Photoshop ve Illustrator gibi Adobe programlarının yanısıra, NukeX, Blender 3D gibi programlarda da kendimi geliştirdim ve geliştirmeye devam ediyorum. İlki "Yağmurlarda Yıkansam" uzun metraj filminde pre-production boyunca set amirliği, diğeri de Tiramisu Prodüksiyon'da videographer ve video editor görevlerinde olmak üzere iki staj yaptım.</p>
