--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
 		</div>
 	</div>
 
+	<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+			<div class="row animate-box">
+		<h2>SHOWREEL 2012-2017</h2>
+		<iframe width="100%" height="350px" src="https://www.youtube.com/embed/1csN3n7kgFk?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+	</div>
+
 	<div id="fh5co-resume" class="fh5co-bg-color">
 		<div class="container">
 			<div class="row animate-box">
@@ -132,7 +139,7 @@
 									<p><i class="far fa-clock"></i>  Süre: 56"</p>
 									<p><i class="fas fa-volume-up"></i>  Ses: Stereo</p>
 									<p><i class="fas fa-paint-brush"></i>  Renk: Renksiz</p>
-									<p><i class="fas fa-expand-arrows-alt"></i>  Kare Oranı: 4:3</p>
+									<p><i class="fas fa-expand-arrows-alt"></i>  Kare Oranı: 16:9</p>
 									<p><i class="fas fa-camera"></i>  Kamera ve Lens: Canon 500d, 18-55 Kit Lens</p>
 									<p><i class="fas fa-cut"></i>  Post Production: Adobe Premiere</p>
 								</div>
