--- a/index.html
+++ b/index.html
@@ -104,14 +104,19 @@
 					</p>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading" style="margin-bottom: -2em !important; margin-top: 5em !important;">
+					<div class="row animate-box">
+						<h2>SHOWREEL 2012-2017</h2>
+						<div class="embed-responsive embed-responsive-16by9">
+							<iframe style="border: 1em solid #FF9000 !important;" title="showreel" src="https://www.youtube.com/embed/1csN3n7kgFk?rel=0"
+								class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+						</div>
+						<!-- <iframe width="100%" height="350px" src="https://www.youtube.com/embed/1csN3n7kgFk?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+					</div>
+				</div>
+			</div>
 		</div>
-	</div>
-
-	<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-			<div class="row animate-box">
-		<h2>SHOWREEL 2012-2017</h2>
-		<iframe width="100%" height="350px" src="https://www.youtube.com/embed/1csN3n7kgFk?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-</div>
 	</div>
 
 	<div id="fh5co-resume" class="fh5co-bg-color">
