--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<li><span class="first-block"><i class="fas fa-user"></i> İsim:</span><span class="second-block">Efe Can Uyar</span></li>
 						<li><span class="first-block"><i class="fas fa-mobile"></i> Telefon:</span><span class="second-block"><a href="tel:+905063903185">+90 506 390 31 85</a></span></li>
 						<li><span class="first-block"><i class="fas fa-envelope"></i> Email:</span><span class="second-block"><a href="mailto:efecanuyar@gmail.com" target="_top">efecanuyar@gmail.com</a></span></li>
-						<li><span class="first-block"><i class="fas fa-map-marker"></i> Adres:</span><span class="second-block">Gayrettepe/İSTANBUL</span></li>
+						<li><span class="first-block"><i class="fas fa-map-marker"></i> Adres:</span><span class="second-block">Karşıyaka/İZMİR</span></li>
 						<li><span class="first-block"><i class="fas fa-address-card"></i> Ehliyet:</span><span class="second-block">A2, B</span></li>
 					</ul>
 				</div>
